# easyclip

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  bunfig.toml  eslint.config.ts  package.json  playwright.config.ts  release-please-config.json  tsconfig.json  vite.config.ts  wdio.conf.ts
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  homebrew-dryrun.yml  regenerate-goldens.yml  release.yml
docs/sketches/: MANIFEST.md
scripts/: README-ffmpeg.md  check-version-sync.test.ts  check-version-sync.ts  ffmpeg-checksums.json  release-please-config.test.ts  render-brew-cask.sh  render-brew-cask.test.ts  scan-hardcoded-strings.test.ts  scan-hardcoded-strings.ts  scan-no-edit-modes.test.ts  scan-no-edit-modes.ts  scan-physical-axes.test.ts  scan-physical-axes.ts  setup-ffmpeg.ts  smoke-sidecar.ts  update-ffmpeg-hashes.ts
scripts/setup-ffmpeg/: extract.test.ts  extract.ts  fetch.test.ts  fetch.ts  place.test.ts  place.ts  verify.test.ts  verify.ts
scripts/testdata/: easyclip-cask-0.2.0.rb
src/: app.css  app.html  test-preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  validation.rs
src-tauri/src/ffmpeg/: concat.rs  invoker.rs  mod.rs  poster.rs  probe.rs  progress.rs  trim.rs
src-tauri/src/processing/: mod.rs  output.rs  plan.rs
src-tauri/tests/: asset_scope.rs  probe_media.rs  process_media.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/stderr/: corrupted_moov.txt  disk_full_mux.txt  disk_full_open.txt  muxer_tag_not_supported.txt  permission_denied_input.txt  permission_denied_output.txt  processing_failed.txt  sidecar_unusable_linux.txt  sidecar_unusable_macos.txt  sidecar_unusable_windows.txt  unsupported_codec.txt
src/lib/: types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
tests/: wd-macos-spike.spec.ts
(+88 files in other folders)
