[package]
name = "easyclip"
version = "0.1.0"
description = "Cross-platform desktop media trimmer"
authors = ["Haim"]
license = "MIT"
edition = "2021"
rust-version = "1.82"

[lib]
name = "easyclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-webdriver-automation = "0.1"

[features]
default = []

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
# Replicate tauri::scope::fs's glob matching in tests/asset_scope.rs so the
# asset-protocol allowlist is guarded in CI (same crate/version Tauri matches with).
glob = "0.3"
